--- a/index.html
+++ b/index.html
@@ -163,27 +163,27 @@
 <!-- Recipe Section -->
 <section id="recipes" class="recipes">
     <div class="recipe-card" onclick="showRecipe('garlic-butter-shrimp')">
-        <img src="pictures/garlic butter shirmp.jpg" alt="Garlic Butter Shrimp">
+        <img src="gar.jpg" alt="Garlic Butter Shrimp">
         <h3>Garlic Butter Shrimp</h3>
         <p>Succulent shrimp cooked in a rich, buttery garlic sauce, perfect as an appetizer or main dish.</p>
     </div>
     <div class="recipe-card" onclick="showRecipe('baked-salmon-with-lemon')">
-        <img src="pictures/baked salmon.jpg" alt="Baked Salmon with Lemon">
+        <img src="sal.jpg" alt="Baked Salmon with Lemon">
         <h3>Baked Salmon with Lemon</h3>
         <p>Tender salmon fillets baked with a bright and zesty lemon glaze for a healthy and delicious meal.</p>
     </div>
     <div class="recipe-card" onclick="showRecipe('seafood-paella')">
-        <img src="pictures/seafood paella.jpg" alt="Seafood Paella">
+        <img src="sea.jpg" alt="Seafood Paella">
         <h3>Seafood Paella</h3>
         <p>A classic Spanish dish with saffron-infused rice, mussels, shrimp, and clams, brimming with flavor.</p>
     </div>
     <div class="recipe-card" onclick="showRecipe('grilled-mahi-mahi-with-mango-salsa')">
-        <img src="pictures/grilled mahi mahi.jpg" alt="Grilled Mahi Mahi with Mango Salsa">
+        <img src="gri.jpg" alt="Grilled Mahi Mahi with Mango Salsa">
         <h3>Grilled Mahi Mahi with Mango Salsa</h3>
         <p>Perfectly grilled mahi mahi topped with a fresh, tangy mango salsa for a tropical twist.</p>
     </div>
     <div class="recipe-card" onclick="showRecipe('cioppino')">
-        <img src="pictures/cioppino.jpg" alt="Cioppino">
+        <img src="cia.jpg" alt="Cioppino">
         <h3>Cioppino</h3>
         <p>A hearty Italian-American seafood stew with shrimp, clams, mussels, and fish in a rich tomato broth.</p>
     </div>
